<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56026E"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UselessLeaf,UselessParent" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/explanation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/introductionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttongiris"
            android:text="@string/introduction"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttongiris"
            android:text="@string/enterButton"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</RelativeLayout>