<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6F028E"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/hello_world"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/nfcOkutKayitAc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttongiris"
        android:text="@string/nfcOkutKayitAc"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/waiting"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/urunEkle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nfcOkutKayitAc"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttongiris"
        android:text="@string/urunekle"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>